[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[metadata]
name = python-tnetstring
author = Jose Tiago Macara Coutinho
author_email = coutinhotiago@gmail.com
description = Pure python tnetstring protocol
long_description = file: README.md
long_description_content_type = text/markdown
keywords = tnetstring
url = https://github.com/tiagocoutinho/tnetstring
project_urls = 
	Bug Tracker = https://github.com/miguelgrinberg/aioflask/issues
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
py_modules = tnetstring

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:tnetstring.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = docs

[aliases]
test = pytest

[tool:pytest]
addopts = --cov-config=.coveragerc --cov tnetstring
	--cov-report html --cov-report term
	--durations=2 --verbose

